# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./musicas";
 export * from "./users";
 export * from "./sessions";
+export * from "./access-codes";
